Fixed transcript, fixed alignment and added image to profiling page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -164,7 +164,6 @@ p {
   width: 100%;
   color: #212121;
   font-style: normal;
-  text-align: left;
 }
 
 abbr[title],
